tests/negative/neg_channel_access_component.safe
-- Test: neg_channel_access_component
-- Description: Channel element types shall not be composites containing access-type components.
--   Anonymous access subcomponents are rejected just like named access fields.
-- Expected: REJECT source_frontend_error

package neg_channel_access_component

   type payload is record
      value : integer;


   type envelope is record
      Item : access payload;


   channel data_ch : envelope capacity 1;


